add all examples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "rstooling"
-description = "Research Tooling"
+name = "examples"
+description = "examples"
 requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 
 [tool.setuptools]
-packages = ["rstooling"]
+packages = ["examples"]
 
 [tool.ruff]
 target-version = "py311"
